tests/snapshots/output/completions__bare_zsh_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo completions --json
exit: 0
--- stdout ---
{
  "shell": "zsh",
  "installed": false
}
